fix: The archives configuration has been deprecated for artifact declaration.